# how-to-optimize-gemm

src/riscv64/: CMakeLists.txt  MMult0.cpp  MMult1.cpp  MMult2.cpp  MMult_1x4_3.cpp  MMult_1x4_4.cpp  MMult_1x4_5.cpp  MMult_1x4_6.cpp  MMult_1x4_7.cpp  MMult_1x4_8.cpp  MMult_1x4_9.cpp  MMult_4x4_3.cpp  MMult_4x4_4.cpp  MMult_4x4_5.cpp  MMult_4x4_6.cpp  MMult_4x4_7.cpp  PlotAll.py  REF_MMult.cpp  build.sh  compare_matrices.cpp  copy_matrix.cpp  output_MMult0.m  output_MMult1.m  output_MMult2.m  output_MMult_1x4_3.m  output_MMult_1x4_4.m  output_MMult_1x4_5.m  output_MMult_1x4_6.m  output_MMult_1x4_7.m  output_MMult_1x4_8.m  output_MMult_1x4_9.m  parameters.h  print_matrix.cpp  random_matrix.cpp  test_MMult.cpp
src/riscv64/cmake/: Riscv64.cmake
src/x86_64/: MMult2.c  MMult_1x4_3.c  MMult_1x4_4.c  MMult_1x4_5.c  MMult_1x4_6.c  MMult_1x4_7.c  MMult_1x4_8.c  MMult_1x4_9.c  MMult_4x4_10.c  MMult_4x4_11.c  MMult_4x4_13.c  MMult_4x4_14.c  MMult_4x4_15.c  MMult_4x4_3.c  MMult_4x4_4.c  MMult_4x4_5.c  MMult_4x4_6.c  MMult_4x4_7.c  MMult_4x4_8.c  MMult_4x4_9.c
